Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4365

clang-analyzer: benign "leaks" in CPP API plugin examples

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • CPP API
    • None

    Description

      Memory Error	Memory leak	lib/atscppapi/examples/helloworld/HelloWorldPlugin.cc	TSPluginInit	34	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/globalhook/GlobalHookPlugin.cc	TSPluginInit	45	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/transactionhook/TransactionHookPlugin.cc	TSPluginInit	69	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/multiple_transaction_hooks/MultipleTransactionHookPlugins.cc	TSPluginInit	106	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/clientrequest/ClientRequest.cc	TSPluginInit	138	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/serverresponse/ServerResponse.cc	TSPluginInit	119	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/clientredirect/ClientRedirect.cc	TSPluginInit	79	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/customresponse/CustomResponse.cc	TSPluginInit	87	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/null_transformation_plugin/NullTransformationPlugin.cc	TSPluginInit	104	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/post_buffer/PostBuffer.cc	TSPluginInit	82	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/logger_example/LoggerExample.cc	TSPluginInit	138	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/stat_example/StatExample.cc	TSPluginInit	77	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/remap_plugin/RemapPlugin.cc	TSRemapNewInstance	90	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/custom_error_remap_plugin/CustomErrorRemapPlugin.cc	TSRemapNewInstance	55	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/async_http_fetch/AsyncHttpFetch.cc	handleSendRequestHeaders	100	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/async_http_fetch/AsyncHttpFetch.cc	TSPluginInit	219	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/gzip_transformation/GzipTransformationPlugin.cc	TSPluginInit	197	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/timeout_example/TimeoutExamplePlugin.cc	TSPluginInit	62	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/internal_transaction_handling/InternalTransactionHandling.cc	TSPluginInit	76	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/internal_transaction_handling/InternalTransactionHandling.cc	TSPluginInit	77	2	View Report
      Memory Error	Memory leak	lib/atscppapi/examples/intercept/intercept.cc	TSPluginInit	60	2	View Report
      

      Attachments

        Activity

          People

            briang Brian Geffon
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: