TS-4365: Prevent invalid clang-analyzer memory leak warnings in atscppapi