lib/atscppapi/examples/clientrequest/ClientRequest.cc
@@ -28,6 +28,11 @@ using std::endl;
 using std::list;
 using std::string;
 
+namespace
+{
+GlobalPlugin *plugin;
+}
+
 class GlobalHookPlugin : public GlobalPlugin
 {
 public:
@@ -134,5 +139,5 @@ void
 TSPluginInit(int argc ATSCPPAPI_UNUSED, const char *argv[] ATSCPPAPI_UNUSED)
 {
   RegisterGlobalPlugin("CPP_Example_ClientRequest", "apache", "dev@trafficserver.apache.org");
-  new GlobalHookPlugin();
+  plugin = new GlobalHookPlugin();
 }
