lib/atscppapi/examples/helloworld/HelloWorldPlugin.cc
@@ -19,6 +19,13 @@
 #include <iostream>
 #include <atscppapi/GlobalPlugin.h>
 #include <atscppapi/PluginInit.h>
+
+using namespace atscppapi;
+namespace
+{
+GlobalPlugin *plugin;
+}
+
 class HelloWorldPlugin : public atscppapi::GlobalPlugin
 {
 public:
@@ -30,5 +37,5 @@ TSPluginInit(int argc ATSCPPAPI_UNUSED, const char *argv[] ATSCPPAPI_UNUSED)
 {
   std::cout << "Hello from " << argv[0] << std::endl;
   atscppapi::RegisterGlobalPlugin("CPP_Example_HelloWorld", "apache", "dev@trafficserver.apache.org");
-  new HelloWorldPlugin();
+  plugin = new HelloWorldPlugin();
 }
