lib/atscppapi/examples/internal_transaction_handling/InternalTransactionHandling.cc
@@ -24,6 +24,12 @@
 using namespace atscppapi;
 using std::string;
 
+namespace
+{
+GlobalPlugin *plugin;
+GlobalPlugin *plugin2;
+}
+
 #define TAG "internal_transaction_handling"
 
 class AllTransactionsGlobalPlugin : public GlobalPlugin
@@ -72,6 +78,6 @@ TSPluginInit(int argc ATSCPPAPI_UNUSED, const char *argv[] ATSCPPAPI_UNUSED)
 {
   RegisterGlobalPlugin("CPP_Example_InternalTransactionHandling", "apache", "dev@trafficserver.apache.org");
   TS_DEBUG(TAG, "Loaded async_http_fetch_example plugin");
-  new AllTransactionsGlobalPlugin();
-  new NoInternalTransactionsGlobalPlugin();
+  plugin = new AllTransactionsGlobalPlugin();
+  plugin2 = new NoInternalTransactionsGlobalPlugin();
 }
