lib/atscppapi/examples/timeout_example/TimeoutExamplePlugin.cc
@@ -25,6 +25,11 @@ using namespace atscppapi;
 
 #define TAG "timeout_example_plugin"
 
+namespace
+{
+GlobalPlugin *plugin;
+}
+
 class TimeoutExamplePlugin : public GlobalPlugin
 {
 public:
@@ -58,5 +63,5 @@ TSPluginInit(int argc ATSCPPAPI_UNUSED, const char *argv[] ATSCPPAPI_UNUSED)
 {
   RegisterGlobalPlugin("CPP_Example_Timeout", "apache", "dev@trafficserver.apache.org");
   TS_DEBUG(TAG, "TSPluginInit");
-  new TimeoutExamplePlugin();
+  plugin = new TimeoutExamplePlugin();
 }
