lib/atscppapi/examples/transactionhook/TransactionHookPlugin.cc
@@ -23,6 +23,11 @@
 
 using namespace atscppapi;
 
+namespace
+{
+GlobalPlugin *plugin;
+}
+
 class TransactionHookPlugin : public atscppapi::TransactionPlugin
 {
 public:
@@ -65,5 +70,5 @@ void
 TSPluginInit(int argc ATSCPPAPI_UNUSED, const char *argv[] ATSCPPAPI_UNUSED)
 {
   RegisterGlobalPlugin("CPP_Example_TransactionHook", "apache", "dev@trafficserver.apache.org");
-  new GlobalHookPlugin();
+  plugin = new GlobalHookPlugin();
 }
